--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "angularfromscratch",
   "version": "1.0.0",
   "dependencies": {
-    "@angular/animations": "^13.0.2",
     "@angular/common": "^13.0.2",
     "@angular/compiler": "^13.0.2",
+    "@angular/compiler-cli": "^13.0.2",
     "@angular/core": "^13.0.2",
-    "@angular/forms": "^13.0.2",
     "@angular/platform-browser": "^13.0.2",
     "@angular/platform-browser-dynamic": "^13.0.2",
-    "@angular/router": "^13.0.2"
+    "@angular/router": "^13.0.2",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.0.3",
