--- a/angular.json
+++ b/angular.json
@@ -15,8 +15,7 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",
-            "scripts": []
+            "tsConfig": "tsconfig.app.json"
           },
           "configurations": {
             "development": {
@@ -33,9 +32,6 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
-            "production": {
-              "browserTarget": "angularfromscratch:build:production"
-            },
             "development": {
               "browserTarget": "angularfromscratch:build:development"
             }
