--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.0.3",
-    "typescript": "^4.4.4"
+    "typescript": "4.4.2"
   }
 }
